[package]
name = "modrinther"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
indicatif = "0.17"
console = "0.15.7"    # For terminal control
zip = "0.6.6"         # For ZIP file handling